inserção da frase inspiradora

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div class="container">
                 <div class="frase-content">
                     <img src="" alt="">
-                    <p></p>
+                    <p>A imaginação, muitas vezes, conduz-nos a mundos a que nunca fomos. Sem ela, não vamos a nenhum lugar. <br> - Carl Sagan</p>
                 </div>
             </div>
         </section>
