finalização da mensagem inspiradora

--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
         <section class="frase">
             <div class="container">
                 <div class="frase-content">
-                    <img src="" alt="">
-                    <p>A imaginação, muitas vezes, conduz-nos a mundos a que nunca fomos. Sem ela, não vamos a nenhum lugar. <br> - Carl Sagan</p>
+                    <img src="img/ilustração.png" alt="Ilustração de Tela de Computador">
+                    <p>A imaginação, muitas vezes, conduz-nos a mundos a que nunca fomos. Sem ela, não vamos a nenhum lugar. <br><br> - Carl Sagan</p>
                 </div>
             </div>
         </section>
