pré-atualização dos perfis

--- a/index.html
+++ b/index.html
@@ -173,15 +173,61 @@
                                     </div>
                                     <div class="content">
                                         <div class="details">
-                                            <h2>Bismark Mesquita<br><span>Web Developer</span></h2>
+                                            <h2>Julia Braccini<br><span>Designer</span></h2>
                                             <div class="data">
-                                                <h3>20<br><span>Anos</span></h3>
-                                                <h3>Fortaleza<br><span>CE</span></h3>
+                                                <h3>17<br><span>Anos</span></h3>
+                                                <h3>Rio Grande<br><span>RS</span></h3>
                                                 <h3>750<br><span>Stars</span></h3>
                                             </div>
                                             <div class="actionBtn">
                                                 <a href="#"><i class='bx bxl-instagram-alt'></i></a>
-                                                <a href="#"><i class='bx bxl-linkedin' ></i></a>
+                                                <a href="#"><i class='bx bxl-twitter'></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="slide swiper-slide">
+                                
+                                <div class="card-perfil">
+                                    <div class="imgBx">
+                                        <img src="img/bismark.jpg" alt="Bismark">
+                                    </div>
+                                    <div class="content">
+                                        <div class="details">
+                                            <h2>Ana Rodrigues<br><span>Web Developer</span></h2>
+                                            <div class="data">
+                                                <h3>18<br><span>Anos</span></h3>
+                                                <h3>Santa Maria<br><span>RS</span></h3>
+                                                <h3>750<br><span>Stars</span></h3>
+                                            </div>
+                                            <div class="actionBtn">
+                                                <a href="#"><i class='bx bxl-instagram-alt'></i></a>
+                                                <a href="#"><i class='bx bxl-twitter'></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="slide swiper-slide">
+                                
+                                <div class="card-perfil">
+                                    <div class="imgBx">
+                                        <img src="img/bismark.jpg" alt="Bismark">
+                                    </div>
+                                    <div class="content">
+                                        <div class="details">
+                                            <h2>Leonardo S.Colares<br><span>Designer</span></h2>
+                                            <div class="data">
+                                                <h3>17<br><span>Anos</span></h3>
+                                                <h3>Rio Grande<br><span>RS</span></h3>
+                                                <h3>750<br><span>Stars</span></h3>
+                                            </div>
+                                            <div class="actionBtn">
+                                                <a href="#"><i class='bx bxl-instagram-alt'></i></a>
+                                                <a href="#"><i class='bx bxl-twitter'></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -213,7 +259,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <h2>Squad 7 - #TeuFuturo</h2>
+                <h2>Squad 7 - <a href="https://www.instagram.com/teufuturo__/">#TeuFuturo</a></h2>
                 <img src="img/logo.png" alt="Logo Razor">
             </div>
         </div>
