--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
                     <h1>O que você quer produzir hoje?</h1>
                 </div>
                 <div class="banner-content-02">
-                    <a href="#">Design 3D</a>
-                    <a href="#">Edição de Vídeo</a>
-                    <a href="#" id="ilustrações">Ilustrações</a>
-                    <a href="#">Motion Design</a>
+                    <a href="#ilustrações">Ilustrações</a>
+                    <a href="#modelos">Modelos</a>
+                    <a href="#destaque">Destaque</a>
+                    <a href="#squad7">Squad 7</a>
                 </div>
             </div>
         </section>
 
-        <section class="cta">
+        <section class="cta" id="ilustrações">
             <div class="container">
                 <div class="cta-titulo">
                     <h2>Ilustrações</h2>
@@ -81,7 +81,7 @@
             </div>
         </section>
 
-        <section class="oferta">
+        <section class="oferta" id="modelos">
             <div class="container">
                 <div class="oferta-content-01">
                     <h2>Modelos recomendados</h2>
@@ -109,7 +109,7 @@
             </div>
         </section>
 
-        <section class="destaque">
+        <section class="destaque" id="destaque">
             <div class="container">
                 <div class="destaque-titulo">
                     <h2>Destaque Supremo</h2>
@@ -132,7 +132,7 @@
             </div>
         </section>
 
-        <section class="perfil">
+        <section class="perfil" id="squad7">
             <div class="container">
                 <div class="perfil_titulo">
                     <h2 class="home_titulo"> < The Last of Seven > </h2>
