adicionando botão voltar ao topo e scroll suave na página

--- a/index.html
+++ b/index.html
@@ -263,10 +263,19 @@
                 <img src="img/logo.png" alt="Logo Razor">
             </div>
         </div>
+
+        <div data-scroll="suave" data-anima="scroll" class="scroll-topo">
+            <a href="#header">
+                <div class="topo">
+                    <i class='bx bxs-up-arrow-circle' alt="voltar ao topo"></i>
+                </div>
+            </a>
+        </div>
     </footer>
 
     <script src="js/mobile-nav.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/perfil.js"></script>
+    <script src="js/scroll-animation.js"></script>
 </body>
 </html>
