alterando função da Ana para presenter

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                     </div>
                                     <div class="content">
                                         <div class="details">
-                                            <h2>Ana Rodrigues<br><span>Web Developer</span></h2>
+                                            <h2>Ana Rodrigues<br><span>Presenter</span></h2>
                                             <div class="data">
                                                 <h3>18<br><span>Anos</span></h3>
                                                 <h3>Santa Maria<br><span>RS</span></h3>
