correção de ortografia na seção do cta

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="cta-content">
                     <div class="cta-content-01">
-                        <h2>Cresça no mercado com máquinas que acomanham a sua <b>criatividade</b>.</h2>
+                        <h2>Cresça no mercado com máquinas que acompanham a sua <b>criatividade</b>.</h2>
                         <p>Não limite suas ideias, trabalhe com máquinas de alta performance que não te deixam na mão. </p>
                         <a href="#">Encontre a sua</a>
                     </div>
